engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_mixed.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search

› [x] Use theme colors      Apply colors from the active /theme
  ───────────────────────
  [x] project-name          Project name (omitted when unavailable)
  [x] git-branch            Current Git branch (omitted when unavailable)
  [x] thread-title          Current thread title, or thread identifier when unnamed
  [x] daybreak              Whether Daybreak is enabled for this thread
  [ ] model                 Current model name
  [ ] model-with-reasoning  Current model name with reasoning level
↓
  my-project · feature/mixed-preview · Mixed preview thread · Daybreak on
  space toggle · ←/→ reorder · enter save · esc cancel
